syntax = "proto3";

package auth;

import "./inputs/sign-in.input.proto";
import "./inputs/sign-up.input.proto";
import "./inputs/verify-google-access-token.input.proto";
import "./inputs/init.input.proto";
import "../../base/message-response.base.proto";

import "../../dtos/user.dto.proto";

service AuthService {
  rpc signIn (SignInInput) returns (User) {}
  rpc signUp (SignUpInput) returns (MessageResponse) {}
  rpc verifyGoogleAccessToken(VerifyGoogleAccessTokenInput) returns (MessageResponse) {}
  rpc init(InitInput) returns (User) {}
}


