syntax = "proto3";

message InitInput {
    string userId = 1;
}