syntax = "proto3";

message SignInRequestBody {
    string email = 1;
    string password = 2;
}