syntax = "proto3";

import "google/protobuf/timestamp.proto";

message SignUpRequestBody {
    string email = 1;
    string password = 2;
    string firstName = 3;
    string lastName = 4;
    string birthdate = 5;
}